2012-01-12 Jérôme Pasquier  <rainbru@free.fr>

	* src/ogreGui/Makefile.am: Trying to understand circular dependencies
	with the maincore library.

2011-12-27 Jérôme Pasquier  <rainbru@free.fr>

	* acinclude.m4 (RB_CHECK_LIBFOX): Fix the integer warning when
	testing $FOX_CONFIG and -1
	* configure.in: uses AM_GNU_GETTEXT_VERSION to fix an `autoreconf`
	warning.

2011-12-26 Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/xIdent/: whole directopy move to ../OLD/.

2011-12-17 Jérôme Pasquier  <rainbru@free.fr>

	* IrrClient/: whole directopy move to ../OLD/.

	* svn: many Makefile(s) ignored from various directories.

2011-12-12 Jérôme Pasquier  <rainbru@free.fr>

	* svn: many generated files ignored.

	* various Makefiles: removed from svn repository.

	* src/common/version.cpp (logOptions): logs building options.

2011-12-09 Jerome Pasquier  <rainbru@free.fr>

	* configure.in: BUILD_RELEASE issue fixed.

2011-11-29 Jerome Pasquier  <rainbru@free.fr>

	* RainbruRPG.lsm.in: modified: ready to be submitted.

2011-11-29 Jerome Pasquier  <rainbru@free.fr>

	* configure.in: checks again gnet-2.0.

2011-07-18 Jerome Pasquier  <rainbru@free.fr>

	* RainbruRPG.texi: fixed a @subtitle issue.

2011-06-05 Jerome Pasquier  <rainbru@free.fr>

	* src/client/languageselector.cpp (feedComboBox): use pre-increment.
	* src/client/main.cpp: remove unneeded cast for guiframelistener.
	* src/client/gsmainmenu.h (getCreateMenu): remove usunsed function.

2011-06-04 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsmainmenu.h: get rid od the dynamic menu feature.

	* src/client/gsConnection.cpp: label and window become members.
	* src/ogreGui/Font.cpp: Add assignent operator.
	* src/ogreGui/Label.cpp: Add assignent operator.
	* src/ogreGui/TextSettings.cpp: Add assignent operator and copy ctor.
	* src/ogreGui/Brush.cpp: Finish assignent operator.


2011-05-28 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Brush.cpp: Remove some unused getters.
