@@ -423,7 +423,8 @@ name, date, heure, gamestate, position, name perso, name server, versions
 - [ ] Should create RenderSystem_GL.dll from Ogre3D
       Need OpenGL for minwg32
 - [ ] Should provide GNU gettext for win32
-**** TODO Miscelaneous                                                [86%]
+**** TODO Miscelaneous                                                [93%]
+     CLOCK: [2012-01-18 mer. 16:06]--[2012-01-18 mer. 16:50] =>  0:44
      CLOCK: [2012-01-12 jeu. 10:53]--[2012-01-12 jeu. 11:28] =>  0:35
      CLOCK: [2012-01-06 ven. 15:36]--[2012-01-06 ven. 16:09] =>  0:33
      CLOCK: [2011-12-27 mar. 18:35]--[2011-12-27 mar. 19:06] =>  0:31
@@ -455,12 +456,9 @@ name, date, heure, gamestate, position, name perso, name server, versions
       See the 'freetype-config: integer expression expected' warning
 - [X] CANCELED Must change LauncherOptions icons
 - [X] GNU headers date update for 2012
-- [ ] May remove interdepencies ogreGui/Maincore 
-      and correct wiki:BuildingFromSources
-      Must list dependencies
-      - [ ] From maincore to ogregui
-      - [ ] from ogregui to maincore
-      Or testing '--start-group archives --end-group' from ld
+- [X] May remove interdepencies ogreGui/Maincore 
+      Create the src/interdep/ convenience library containing :
+  GameEngine, GameState, InputManager, NullWindowHandleException, WindowHandle
 - [ ] Should remove unused datafiles
 *** DONE v0.0.6
 **** DONE OgreGui2 UML diagram                                        [100%]
