@@ -115,7 +115,9 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-214 (02 dec 2011 - ???) SLOC ??? UT ??? FT ??:??
-- (11) Trying to understand ogreGui/maincore circular dependencies
+- (12) Avoid circular dependencies between ogreGui and maincore
+   using the src/interdep convenience library
+- Trying to understand ogreGui/maincore circular dependencies
 - Update GNU headers date for 2012
 - Fix some configure warnings
    Using AM_GNU_GETTEXT_VERSION, m4: RB_CHECK_LIBFOX integer warning
