@@ -404,7 +404,7 @@ on `(hostname || uname -n) 2>/dev/null | sed 1q`
 "
 
 # Files that config.status was made for.
-config_files=" Makefile po/Makefile.in ext/Makefile doc/Makefile doc/ogregui-uml.dot src/Makefile src/testHelpers/Makefile src/common/Makefile src/terminalapi/Makefile src/maincore/Makefile src/ogreGui/Makefile src/design/Makefile src/client/Makefile src/editor/Makefile src/server/Makefile src/tests/Makefile src/tools/Makefile src/tools/transmsg/Makefile src/tools/netflooder/Makefile src/tools/ftpclient/Makefile src/tools/hashsum/Makefile src/examples/Makefile src/examples/tapi/Makefile config/Makefile data/Makefile data/fox/Makefile data/gui/Makefile data/gui/XMLRefSchema/Makefile data/gui/schemes/Makefile data/gui/imagesets/Makefile data/gui/looknfeel/Makefile data/gui/fonts/Makefile data/gui/layouts/Makefile data/gui/overlays/Makefile data/gui/ogreGui/Makefile media/Makefile media/packs/Makefile media/materials/Makefile media/materials/scripts/Makefile media/materials/textures/Makefile mapdata/Makefile mapdata/terrains/Makefile mapdata/terrains/hf129_3/Makefile mapdata/materials/Makefile mapdata/materials/textures/Makefile mapdata/materials/scripts/Makefile mapdata/materials/programs/Makefile mapdata/models/Makefile RainbruRPG.lsm RainbruRPG.spec terminalapi-1.0.pc RainbruRPG-common.pc Doxyfile"
+config_files=" Makefile po/Makefile.in ext/Makefile doc/Makefile doc/ogregui-uml.dot src/Makefile src/testHelpers/Makefile src/common/Makefile src/interdep/Makefile src/terminalapi/Makefile src/maincore/Makefile src/ogreGui/Makefile src/design/Makefile src/client/Makefile src/editor/Makefile src/server/Makefile src/tests/Makefile src/tools/Makefile src/tools/transmsg/Makefile src/tools/netflooder/Makefile src/tools/ftpclient/Makefile src/tools/hashsum/Makefile src/examples/Makefile src/examples/tapi/Makefile config/Makefile data/Makefile data/fox/Makefile data/gui/Makefile data/gui/XMLRefSchema/Makefile data/gui/schemes/Makefile data/gui/imagesets/Makefile data/gui/looknfeel/Makefile data/gui/fonts/Makefile data/gui/layouts/Makefile data/gui/overlays/Makefile data/gui/ogreGui/Makefile media/Makefile media/packs/Makefile media/materials/Makefile media/materials/scripts/Makefile media/materials/textures/Makefile mapdata/Makefile mapdata/terrains/Makefile mapdata/terrains/hf129_3/Makefile mapdata/materials/Makefile mapdata/materials/textures/Makefile mapdata/materials/scripts/Makefile mapdata/materials/programs/Makefile mapdata/models/Makefile RainbruRPG.lsm RainbruRPG.spec terminalapi-1.0.pc RainbruRPG-common.pc Doxyfile"
 config_headers=" config.h"
 config_commands=" depfiles libtool po-directories"
 
@@ -676,7 +676,7 @@ finish_cmds='PATH="\$PATH:/sbin" ldconfig -n $libdir'
 finish_eval=''
 hardcode_into_libs='yes'
 sys_lib_search_path_spec='/usr/lib/gcc/i486-linux-gnu/4.4.5 /usr/lib /lib'
-sys_lib_dlsearch_path_spec='/lib /usr/lib /lib/i486-linux-gnu /usr/lib/i486-linux-gnu /usr/local/lib '
+sys_lib_dlsearch_path_spec='/lib /usr/lib /opt/e17/lib /lib/i486-linux-gnu /usr/lib/i486-linux-gnu /usr/local/lib '
 hardcode_action='immediate'
 enable_dlopen='unknown'
 enable_dlopen_self='unknown'
@@ -817,6 +817,7 @@ do
     "src/Makefile") CONFIG_FILES="$CONFIG_FILES src/Makefile" ;;
     "src/testHelpers/Makefile") CONFIG_FILES="$CONFIG_FILES src/testHelpers/Makefile" ;;
     "src/common/Makefile") CONFIG_FILES="$CONFIG_FILES src/common/Makefile" ;;
+    "src/interdep/Makefile") CONFIG_FILES="$CONFIG_FILES src/interdep/Makefile" ;;
     "src/terminalapi/Makefile") CONFIG_FILES="$CONFIG_FILES src/terminalapi/Makefile" ;;
     "src/maincore/Makefile") CONFIG_FILES="$CONFIG_FILES src/maincore/Makefile" ;;
     "src/ogreGui/Makefile") CONFIG_FILES="$CONFIG_FILES src/ogreGui/Makefile" ;;
@@ -1053,7 +1054,7 @@ S["build_os"]="linux-gnu"
 S["build_vendor"]="pc"
 S["build_cpu"]="i686"
 S["build"]="i686-pc-linux-gnu"
-S["ISODATE"]="2012-01-07"
+S["ISODATE"]="2012-01-18"
 S["TAPI_LIBRARY_VERSION"]="1:1:0"
 S["OGREGUI_LIBRARY_VERSION"]="2:0:0"
 S["DESIGN_LIBRARY_VERSION"]="1:0:0"
