@@ -1,0 +1,2 @@
+Here is a convenience library (i.e. an archive) use to avoid circular
+dependencies between ogreGui/ and maincore/
